<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- Vertical LinearLayout for split background -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Blue Background (Top Half) -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/accentRed" />

        <!-- White Background (Bottom Half) -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/relativeDesign"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Status1 -->
        <LinearLayout
            android:id="@+id/statusBackground1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/statusType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="15dp"
                android:ellipsize="middle"
                android:text="@string/note"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center_horizontal"
                android:letterSpacing="0.1"
                android:singleLine="true"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="6sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/statusContent"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:ellipsize="middle"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/list"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <LinearLayout
                android:id="@+id/ll_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1.5dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edt_search"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/search"
                    android:fontFamily="@font/quicksand_medium"
                    android:singleLine="true"
                    android:textSize="9sp"
                    app:met_textColor="@color/white"
                    app:met_textColorHint="@color/white_alpha50" />

                <ImageView
                    android:id="@+id/im_clean_search"
                    android:layout_width="24dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="24dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="3dp"
                    android:src="@drawable/ic_close"
                    tools:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/statusShadow"
            android:layout_marginTop="-10dp">

            <!-- Status2 -->
            <LinearLayout
                android:id="@+id/statusBackground2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notes_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="14dp"
                android:scrollbars="none"
                android:layout_marginTop="2dp"
                tools:listitem="@layout/item_note"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </RelativeLayout>

        <View
            android:id="@+id/statusShadow"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/shadow"
            android:layout_below="@id/statusBackground1" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/searchNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@null"
            android:src="@drawable/ic_search"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:fabSize="mini"
            app:tint="@android:color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_create_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/black"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:src="@drawable/ic_add"
            app:borderWidth="0dp"
            app:elevation="3dp"
            app:fabSize="mini"
            app:tint="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_no_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:visibility="gone"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/no_notes_found"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="10sp"/>

        </RelativeLayout>

    </RelativeLayout>

</androidx.wear.widget.BoxInsetLayout>

