<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Vertical LinearLayout for split background -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Blue Background (Top Half) -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/accentRed" />

        <!-- White Background (Bottom Half) -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_save_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/black"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:src="@drawable/save"
            app:borderWidth="0dp"
            app:elevation="3dp"
            app:fabSize="mini"
            app:tint="@android:color/white" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:id="@+id/relativeDesign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Status1 -->
            <LinearLayout
                android:id="@+id/statusBackground1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/statusType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="15dp"
                    android:ellipsize="middle"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center_horizontal"
                    android:letterSpacing="0.1"
                    android:singleLine="true"
                    android:text="@string/note"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="6sp"
                    tools:ignore="SmallSp" />

                <TextView
                    android:id="@+id/statusContent"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:ellipsize="middle"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/new_note"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/statusShadow"
                android:layout_marginTop="-10dp">

                <!-- Status2 -->
                <LinearLayout
                    android:id="@+id/statusBackground2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="70dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            card_view:cardBackgroundColor="@android:color/transparent"
                            card_view:cardCornerRadius="15dp"
                            card_view:cardElevation="3dp"
                            card_view:cardUseCompatPadding="true">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.github.mmin18.widget.RealtimeBlurView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_alignTop="@id/contentView"
                                    android:layout_alignBottom="@id/contentView"
                                    app:realtimeBlurRadius="100dp"
                                    app:realtimeDownsampleFactor="4"
                                    app:realtimeOverlayColor="#99FFFFFF" />

                                <!-- Content -->
                                <RelativeLayout
                                    android:id="@+id/contentView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/view_card"
                                    android:nestedScrollingEnabled="false"
                                    android:overScrollMode="never"
                                    android:scrollbars="none">

                                    <LinearLayout
                                        android:id="@+id/LL_1"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="?attr/selectableItemBackground"
                                        android:clickable="true"
                                        android:focusable="true"
                                        android:orientation="vertical"
                                        android:padding="18dp"
                                        android:paddingStart="25dp"
                                        android:paddingTop="10dp"
                                        android:paddingEnd="25dp"
                                        android:paddingBottom="10dp">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:ellipsize="end"
                                            android:fontFamily="@font/quicksand_medium"
                                            android:maxLines="2"
                                            android:text="@string/title_header"
                                            android:textColor="@color/colorAccent"
                                            android:textSize="11sp"
                                            android:textStyle="bold"
                                            app:layout_constraintStart_toStartOf="parent"
                                            app:layout_constraintTop_toTopOf="parent" />

                                        <com.rengwuxian.materialedittext.MaterialEditText
                                            android:id="@+id/edt_title"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="5dp"
                                            android:ellipsize="end"
                                            android:fontFamily="@font/quicksand"
                                            android:gravity="start"
                                            android:hint="@string/title_header"
                                            android:singleLine="true"
                                            android:textSize="12sp"
                                            app:met_floatingLabel="highlight"
                                            app:met_floatingLabelText="@string/title_header"
                                            app:met_floatingLabelTextColor="@color/colorAccent"
                                            app:met_primaryColor="@color/colorAccent"
                                            app:met_textColorHint="@color/alpha10_000000" />

                                        <TextView
                                            android:id="@+id/tv_content"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="10dp"
                                            android:ellipsize="end"
                                            android:fontFamily="@font/quicksand_medium"
                                            android:maxLines="2"
                                            android:text="@string/content"
                                            android:textColor="@color/colorAccent"
                                            android:textSize="11sp"
                                            android:textStyle="bold" />

                                        <com.rengwuxian.materialedittext.MaterialEditText
                                            android:id="@+id/edt_content"
                                            android:layout_width="match_parent"
                                            android:layout_height="100dp"
                                            android:layout_marginTop="5dp"
                                            android:fontFamily="@font/quicksand"
                                            android:gravity="start"
                                            android:hint="@string/content_header"
                                            android:inputType="textMultiLine"
                                            android:isScrollContainer="true"
                                            android:scrollbars="vertical"
                                            android:textSize="12sp"
                                            android:overScrollMode="always"
                                            android:nestedScrollingEnabled="true"
                                            app:backgroundTint="@android:color/white"
                                            app:met_floatingLabel="highlight"
                                            app:met_floatingLabelText="@string/content_header"
                                            app:met_floatingLabelTextColor="@color/colorAccent"
                                            app:met_primaryColor="@color/colorAccent"
                                            app:met_textColor="@color/color_333333"
                                            app:met_textColorHint="@color/alpha10_000000" />

                                    </LinearLayout>

                                </RelativeLayout>

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tv_time_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:singleLine="true"
                        android:textColor="@color/color_text_secondary"
                        android:textSize="11sp"
                        android:visibility="gone"
                        tools:text="last update: 2020.07.29 21 44"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/tv_time_create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:singleLine="true"
                        android:textColor="@color/color_text_secondary"
                        android:textSize="11sp"
                        android:visibility="gone"
                        tools:text="Created: 2020.07.29 21 44"
                        tools:visibility="visible" />

                </LinearLayout>

            </RelativeLayout>

            <View
                android:id="@+id/statusShadow"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_below="@id/statusBackground1"
                android:background="@drawable/shadow" />

        </RelativeLayout>

    </ScrollView>

</androidx.wear.widget.BoxInsetLayout>


